bugfix Datagrid: fix misalignment related to scrollbar and minWidth values

--- a/src/alto-ui/Datagrid/components/DatagridHeaderRow/DatagridHeaderRow.scss
+++ b/src/alto-ui/Datagrid/components/DatagridHeaderRow/DatagridHeaderRow.scss
@@ -13,6 +13,7 @@
 
 .DatagridHeaderRow__group-title {
   flex-shrink: 0;
+  width: 100%;
   height: 1.5rem;
   line-height: 1.5rem;
   overflow: hidden;
